--- a/app/src/main/res/layout/interest_listview_element.xml
+++ b/app/src/main/res/layout/interest_listview_element.xml
@@ -12,13 +12,14 @@
         android:layout_alignParentStart="true"
         android:layout_marginLeft="15dp" />
 
-    <Switch
+    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/sw_is_checked"
+        android:id="@+id/cb_is_selected"
+        android:checked="false"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="15dp"
-        android:checked="false" />
+        android:layout_marginRight="15dp" />
+
 </RelativeLayout>
