--- a/app/src/main/res/layout/category_card_element.xml
+++ b/app/src/main/res/layout/category_card_element.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:id="@+id/rl_card_element">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_height="175dp"
         card_view:cardCornerRadius="4dp"
         card_view:cardBackgroundColor="#909090"
-        android:elevation="10dp">
+        android:elevation="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,7 +29,9 @@
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:text="LOL"
-                android:id="@+id/tv_interest" />
+                android:id="@+id/tv_interest"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp" />
 
             <ListView
                 android:layout_width="match_parent"
