--- a/app/src/main/res/layout/activity_interests.xml
+++ b/app/src/main/res/layout/activity_interests.xml
@@ -19,5 +19,5 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android" /> -->
 <RelativeLayout android:layout_height="match_parent"
-    android:layout_width="match_parent-"
+    android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"></RelativeLayout>
